# XOR-indexed-caches-simulators

./: Dockerfile  LICENSE.txt  README.md
d4-7/: d4.h  misc.c  ref.c
d4-7_xor/: d4.h  misc.c
d4-7_xor2/: config.status  d4.h  dineroIV  misc.c
data/: readme.txt
data/existing/: readme.txt
data/reproduced/: readme.txt
haystack-artifact/: Dockerfile  README.md
haystack-artifact/cache-model/: .clang-format  CMakeLists.txt
haystack-artifact/cache-model/errors/: CMakeLists.txt  main.cpp
haystack-artifact/cache-model/include/isl/: cpp2.h  op.h
haystack-artifact/cache-model/src/: Access.cpp  Access.h  CacheModel.cpp  CacheModel.h  Definitions.h  Program.cpp  Program.h  isl-helpers.cpp  isl-helpers.h  main.cpp  model_options.c  model_options.h
haystack-artifact/cache-model/test/: BlinkTest.cpp  CMakeLists.txt  CholeskyTest.cpp  CopyTest.cpp  MultiplicationTest.cpp  StencilTest.cpp  ToyTest.cpp
haystack-artifact/experiments/: .gitignore  acc_baseline_polybench_large.py  acc_baseline_polybench_medium.py  acc_baseline_polybench_xlarge.py  acc_din_euler_assoc_large.py  acc_din_euler_assoc_single_large.py  acc_din_euler_assoc_single_large_new.py  acc_din_full_assoc_large.py  acc_enumerateall_polybench_large.py  acc_noequal_polybench_large.py  acc_noraster_polybench_large.py  acc_papi_large.py  benchmark.py  dinero_2level_4way.py  dinero_2level_8way.py  dinero_3level_2way.py  dinero_3level_4way.py  dinero_3level_8way.py  perf_baseline_polybench_3.2_standard.py  perf_baseline_polybench_large.py  perf_baseline_polybench_medium.py  perf_baseline_polybench_tiled.py  perf_baseline_polybench_xlarge.py  perf_din_large.py  perf_enumerateall_polybench_large.py  perf_noequal_polybench_large.py  perf_noraster_polybench_large.py  perf_onecache_polybench_large.py  perf_threecaches_polybench_large.py  plot_perf_alternatives.py  (+10 more)
plots/: readme.txt
warping-cache-simulation/: CMakeLists.txt  README.md  build-debug.sh  build-release.sh  format.sh
warping-cache-simulation/src/: CMakeLists.txt  main.cpp
warping-cache-simulation/src/Address/: Address.cpp  Address.hpp  SymbolicAddress.cpp  SymbolicAddress.hpp
warping-cache-simulation/src/CacheState/: CacheAccess.cpp  CacheAccess.hpp  CacheAccessResult.cpp  CacheAccessResult.hpp  CacheLine.cpp  CacheLine.hpp  CacheState.cpp  CacheState.hpp  CacheStateFactory.cpp  CacheStateFactory.hpp  FIFOReplacementPolicy.cpp  FIFOReplacementPolicy.hpp  FullyAssociativeCacheState.cpp  FullyAssociativeCacheState.hpp  HierarchicalCacheState.cpp  HierarchicalCacheState.hpp  HitMissCountByCacheLevel.cpp  HitMissCountByCacheLevel.hpp  LRU3PLRU4ReplacementPolicy.cpp  LRU3PLRU4ReplacementPolicy.hpp  LRUReplacementPolicy.cpp  LRUReplacementPolicy.hpp  PLRUIndexTree.cpp  PLRUIndexTree.hpp  PLRUReplacementPolicy.cpp  PLRUReplacementPolicy.hpp  QLRUReplacementPolicy.cpp  QLRUReplacementPolicy.hpp  ReplacementPolicy.cpp  ReplacementPolicy.hpp  ReplacementPolicyFactory.cpp  ReplacementPolicyFactory.hpp  SetAssociativeCacheState.cpp  SetAssociativeCacheState.hpp  SetAssociativeCacheState_mod_c.txt  SetAssociativeCacheState_mod_h.txt  SetAssociativeCacheState_xor1_c.txt
warping-cache-simulation/src/IteratorState/: GlobalIteratorState.cpp  GlobalIteratorState.hpp  IteratorBound.cpp  IteratorBound.hpp  IteratorBoundExtractor.cpp  IteratorBoundExtractor.hpp  IteratorConditionInfo.cpp  IteratorConditionInfo.hpp  IteratorInfo.cpp  IteratorInfo.hpp  IteratorState.cpp  IteratorState.hpp  IteratorStateMap.cpp  IteratorStateMap.hpp
warping-cache-simulation/src/ProgramInfo/: AccessInfo.cpp  AccessInfo.hpp  ArrayInfo.cpp  ArrayInfo.hpp  ArrayInfoExtractor.cpp  ArrayInfoExtractor.hpp  ProgramInfo.cpp  ProgramInfo.hpp  StatementInfo.cpp  StatementInfo.hpp
warping-cache-simulation/src/Settings/: ArraySettings.cpp  ArraySettings.hpp  CacheSettings.cpp  CacheSettings.hpp  CacheSettingsParser.cpp  CacheSettingsParser.hpp  CmdArgParser.cpp  CmdArgParser.hpp  QLRUSettings.cpp  QLRUSettings.hpp  SimulationSettings.hpp  SimulationSettingsParser.cpp  SimulationSettingsParser.hpp  WarpingSettings.hpp  WarpingSettingsParser.cpp  WarpingSettingsParser.hpp
warping-cache-simulation/src/Simulation/: AccessSimulationNode.cpp  AccessSimulationNode.hpp  ConditionHoldsChecker.cpp  ConditionHoldsChecker.hpp  IterationSimulationNode.cpp  IterationSimulationNode.hpp  IterationSimulator.cpp  IterationSimulator.hpp  NodeId.cpp  NodeId.hpp  NonWarpingIterationSimulator.cpp  NonWarpingIterationSimulator.hpp  Simulation.cpp  Simulation.hpp  SimulationAccessInfo.cpp  SimulationAccessInfo.hpp  SimulationConditionInfo.cpp  SimulationConditionInfo.hpp  SimulationNode.cpp  SimulationNode.hpp  SimulationResult.cpp  SimulationResult.hpp  SimulationTree.cpp  SimulationTree.hpp  SimulationTreeBuilder.cpp  SimulationTreeBuilder.hpp  WarpingIterationSimulator.cpp  WarpingIterationSimulator.hpp
warping-cache-simulation/src/Snapshot/: CacheStateSnapshot.cpp  CacheStateSnapshot.hpp  Snapshot.cpp  Snapshot.hpp  SnapshotManager.cpp  SnapshotManager.hpp  SnapshotMatch.cpp  SnapshotMatch.hpp
warping-cache-simulation/src/Util/: AffineFunction.cpp  AffineFunction.hpp  AffineFunctionBound.cpp  AffineFunctionBound.hpp  Bound.hpp  ConstantBound.cpp  ConstantBound.hpp  GlobalVars.cpp  GlobalVars.hpp  IslUtil.cpp  IslUtil.hpp  LRUContainer.hpp  PetUtil.cpp  PetUtil.hpp  StrUtil.cpp  StrUtil.hpp  Timer.cpp  Timer.hpp  Util.cpp  Util.hpp
warping-cache-simulation/src/Warping/: BijectionVerifier.cpp  BijectionVerifier.hpp  CoefficientConflict.cpp  CoefficientConflict.hpp  CoefficientConflictManager.cpp  CoefficientConflictManager.hpp  ConditionCompliesWarpingChecker.cpp  ConditionCompliesWarpingChecker.hpp  ConditionalConflictManager.cpp  ConditionalConflictManager.hpp  FurthestWarpingPointManager.cpp  FurthestWarpingPointManager.hpp  MemoryBlockMappingChecker.cpp  MemoryBlockMappingChecker.hpp  SmartWarpingManager.cpp  SmartWarpingManager.hpp  VanillaWarpingManager.cpp  VanillaWarpingManager.hpp  WarpInfo.cpp  WarpInfo.hpp  WarpingManager.cpp  WarpingManager.hpp  WarpingPeriodCalculator.cpp  WarpingPeriodCalculator.hpp
(+290 files in other folders)
